# MHX

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE.md  mhd_linear_benchmarks.py  mhd_reconnection_rate.py  mhd_tearing_energy_plasmoid_opt.py  mhd_tearing_inverse_design.py  mhd_tearing_inverse_design_figures.py  mhd_tearing_island_evolution.py  mhd_tearing_ml_v2.py  mhd_tearing_postprocess_ml.py  mhd_tearing_postprocess_ml_v2.py  mhd_tearing_scan.py  mhd_tearing_solve.py  plan.md  pyproject.toml  readthedocs.yaml  requirements-ci.txt  requirements.txt  run_MHD.py  run_MHD_box.py
.github/workflows/: benchmark-smoke.yml  ci.yml  docs.yml  publish.yml
badges/: coverage.json
bench/: README.md
docs/: adding_physics.rst  api.md  api.rst  api_policy.md  api_versioning.rst  architecture.md  audit.md  benchmarks.md  benchmarks.rst  campaign_runner.md  campaigns.md  conf.py  diagnostics.md  diagnostics.rst  index.md  index.rst  install.md  inverse_design.rst  latent_ode.rst  literature.md  long_run_evidence.md  media.md  migration.md  model_assembly.md  model_config.rst  neural_ode_reproducibility.md  output_schema.md  output_schema.rst  paper_plan.md  performance.md  performance.rst  physics.rst  plugin_template.rst  plugins.md  plugins.rst  publication_checklist.md  quickstart.md  quickstart.rst  reduced_mhd.md  references.rst  (+8 more)
docs/_static/: benchmark_matrix.rst  latent_ode_ablation.rst  latent_ode_experiment.rst  timing_table.rst
docs/_static/readme/: readme_media_visual_qa.json
docs/figures/: manifest.toml
examples/: README.md  __init__.py  benchmark_timings.py  latent_ode_experiment.py  latent_ode_fast.py  linear_tearing.toml  linear_tearing_hyper.toml  linear_tearing_plugin_demo.toml  linear_tearing_twofluid_toy.toml  local_extension_plugin.py  make_extended_mhd_media.py  make_fast_media.py  make_inverse_design_media.py  make_neural_ode_reproducibility.py  make_readme_media.py  make_rutherford_production_plan.py  make_validation_media.py  model_anisotropic.yaml  model_hall.yaml  model_two_fluid.yaml  physics_plugin_extended_mhd.py  physics_plugin_minimal.py  reproduce_figures.py  run_linear_tearing.py  run_orszag_tang.py  run_rutherford_production_chunk.py  train_latent_ode_fast.py
examples/plugin_template/: README.md  pyproject.toml
examples/plugin_template/src/mhx_example_plugin/: __init__.py  diagnostics.py  physics.py
examples/plugin_template/tests/: test_plugin.py
legacy/: README.md
legacy/old_mhx/: CHANGELOG.md  CODEMAP.md  README.md  mhd_tearing_energy_plasmoid_opt.py  mhd_tearing_ideal_tearing_opt.py  mhd_tearing_inverse_design.py  mhd_tearing_ml.py  mhd_tearing_postprocess.py  mhd_tearing_solve.py  requirements-ci.txt  requirements.txt  run_MHD.py  run_MHD_box.py
legacy/old_mhx/bench/: benchmark_matrix.py
legacy/old_mhx/docs/: api_versioning.rst  benchmarks.rst  conf.py  diagnostics.rst  extended_mhd.rst  index.rst  installation.rst  latent_ode.rst  migration.rst  model_config.rst  output_schema.rst  performance.rst  physics.rst  quickstart.rst
legacy/old_mhx/examples/: benchmark_timings.py  latent_ode_dataset.py  latent_ode_experiment.py  latent_ode_fast.py  make_extended_mhd_media.py  make_fast_media.py  model_electron_pressure.yaml  physics_plugin_extended_mhd.py
legacy/old_mhx/mhx/: __init__.py  config.py  version.py
legacy/old_mhx/tests/: test_diagnostics.py  test_energy_budget.py  (+6 more)
mhx/: __init__.py  config.py  version.py
mhx/cli/: main.py
mhx/inverse_design/: __init__.py  train.py
mhx/io/: npz.py
mhx/ml/: latent_ode.py
mhx/solver/: __init__.py  core.py  diagnostics.py  plugins.py  tearing.py
scripts/legacy/: README.md  mhd_linear_benchmarks.py
src/mhx/: __init__.py  _version.py  runtime.py  versioning.py
templates/physics_plugin_template/: README.md
tests/: conftest.py  test_artifact_manifest.py  test_benchmark_catalog.py  test_benchmark_theory.py  test_campaign_runner.py  test_campaign_templates.py  test_config.py  test_convergence.py  test_coverage_badge.py  test_critical_points.py  test_current_sheet_eigenvalue_validation.py  test_diagnostics.py  test_diffusion_eigenvalue_validation.py  test_docs_links.py  test_dt_convergence.py  test_duration_policy.py  test_equilibria.py  test_extensions.py  test_fkr_linear.py  test_fkr_window_validation.py  test_grid.py  test_import_cli.py  test_io_cli_run.py  test_io_schema.py  test_legacy_import_guard.py  test_linear_tearing_eigenvalue_validation.py  test_linearized_rhs_validation.py  test_metrics_api.py  test_model_config.py  test_neural_ode_reproducibility.py  test_nonlinear_duration_audit.py  test_nonlinear_energy_budget_validation.py  test_orszag_tang_validation.py  test_physics_terms.py  test_plugin_modules.py  test_plugin_template.py  test_plugins.py  test_production_campaign.py  test_production_campaign_scaffold.py  test_readiness_report.py  (+12 more)
tools/: check_legacy_imports.py  write_coverage_badge.py
(+77 files in other folders)
