[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhx"
version = "0.2.0"
description = "Reduced MHD / tearing-mode / reconnection model scripts (JAX-based)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "scipy",
  "matplotlib",
  "diffrax",
  "tqdm",
  "typer>=0.9",
]

[project.scripts]
mhx = "mhx.cli.main:app"

[project.optional-dependencies]
ml = ["optax", "equinox"]
dev = ["pytest>=7", "ruff>=0.1.0", "optax", "equinox", "imageio"]

docs = ["sphinx>=7", "sphinx-rtd-theme>=2", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mhx*"]

[tool.ruff]
line-length = 120
extend-exclude = [
  "scripts/legacy",
  "templates",
  "outputs",
  "docs/_static",
  "bench",
]
