[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mhx"
dynamic = ["version"]
description = "Differentiable JAX framework for magnetic reconnection and magnetohydrodynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "UW Plasma Group" },
]
keywords = ["jax", "mhd", "plasma", "reconnection", "differentiable-programming"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.4",
  "numpy>=1.24",
  "rich>=13",
  "typer>=0.12",
  "tomli>=2; python_version < '3.11'",
  "jaxtyping>=0.2",
]

[project.optional-dependencies]
research = [
  "diffrax>=0.5",
  "equinox>=0.11",
  "lineax>=0.0.7",
  "optimistix>=0.0.10",
  "optax>=0.2",
  "orbax-checkpoint>=0.5",
]
plotting = [
  "imageio>=2",
  "matplotlib>=3.8",
]
docs = [
  "sphinx>=7",
  "myst-parser>=2",
  "sphinx-autodoc-typehints>=2",
]
test = [
  "imageio>=2",
  "matplotlib>=3.8",
  "pytest>=8",
  "pytest-cov>=5",
]
dev = [
  "imageio>=2",
  "matplotlib>=3.8",
  "myst-parser>=2",
  "pytest>=8",
  "pytest-cov>=5",
  "sphinx>=7",
  "sphinx-autodoc-typehints>=2",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/uwplasma/MHX"
Documentation = "https://mhx.readthedocs.io/"
Repository = "https://github.com/uwplasma/MHX"
Issues = "https://github.com/uwplasma/MHX/issues"

[project.scripts]
mhx = "mhx.cli.main:app"

[tool.hatch.version]
path = "src/mhx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mhx"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.github/**",
  "/.pytest_cache",
  "/.pytest_cache/**",
  "/.ruff_cache",
  "/.ruff_cache/**",
  "/.venv",
  "/.venv/**",
  "/docs/_build",
  "/docs/_build/**",
  "docs/_build/**",
  "/legacy",
  "/legacy/**",
  "legacy/**",
  "/outputs",
  "/outputs/**",
  "outputs/**",
  "/**/__pycache__",
  "/**/__pycache__/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["mhx"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
